force-app/main/default/objects/sugati__CSS_Styler__c/sugati__CSS_Styler__c.object-meta.xml
<CustomObject>
    <label>CSS Styler</label>
    <nameField>
        <label>CSS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Stylers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>