force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Button__c.field-meta.xml
<CustomField>
    <fullName>sugati__Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Button</label>
    <type>Checkbox</type>
</CustomField>