force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Button_CSS__c.field-meta.xml
<CustomField>
    <fullName>sugati__Button_CSS__c</fullName>
    <label>Button CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>