force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__CS_Address_Marker__c.field-meta.xml
<CustomField>
    <fullName>sugati__CS_Address_Marker__c</fullName>
    <label>Address Marker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>