force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__CS_Button_JSON__c.field-meta.xml
<CustomField>
    <fullName>sugati__CS_Button_JSON__c</fullName>
    <label>Button JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>