force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__CSS__c.field-meta.xml
<CustomField>
    <fullName>sugati__CSS__c</fullName>
    <label>CSS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>