force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>