force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Email_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Email_Font_Color__c</fullName>
    <label>Email Font Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>