force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Email_Font_Family__c.field-meta.xml
<CustomField>
    <fullName>sugati__Email_Font_Family__c</fullName>
    <label>Email Font-Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>