force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Font_Size__c.field-meta.xml
<CustomField>
    <fullName>sugati__Font_Size__c</fullName>
    <label>Font-Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>