force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__H3color__c.field-meta.xml
<CustomField>
    <fullName>sugati__H3color__c</fullName>
    <label>H3color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>