force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Header_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Color__c</fullName>
    <label>Header-Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>