force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Header_Font_size__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Font_size__c</fullName>
    <label>Header-Font-size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>