force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Hr_Background__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hr_Background__c</fullName>
    <label>Hr-Background</label>
    <length>10</length>
    <type>Text</type>
</CustomField>