force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Hr_Height__c.field-meta.xml
<CustomField>
    <fullName>sugati__Hr_Height__c</fullName>
    <label>Hr-Height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>