force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Summary_Section_Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>sugati__Summary_Section_Logo_Url__c</fullName>
    <label>Summary Section Logo Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>