force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Table__c.field-meta.xml
<CustomField>
    <fullName>sugati__Table__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Table</label>
    <type>Checkbox</type>
</CustomField>