force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Table_Backgroundcolor__c.field-meta.xml
<CustomField>
    <fullName>sugati__Table_Backgroundcolor__c</fullName>
    <label>Table Backgroundcolor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>