force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Table_Border_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Table_Border_Color__c</fullName>
    <label>Table Border Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>