force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Table_Font_Family__c.field-meta.xml
<CustomField>
    <fullName>sugati__Table_Font_Family__c</fullName>
    <label>Table Font-Family</label>
    <length>30</length>
    <type>Text</type>
</CustomField>