force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Table_Font_Style__c.field-meta.xml
<CustomField>
    <fullName>sugati__Table_Font_Style__c</fullName>
    <label>Table Font-Style</label>
    <length>10</length>
    <type>Text</type>
</CustomField>