force-app/main/default/objects/sugati__CSS_Styler__c/fields/sugati__Typography__c.field-meta.xml
<CustomField>
    <fullName>sugati__Typography__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Typography</label>
    <type>Checkbox</type>
</CustomField>